--- a/Rio/Rio.Web/Views/ExamResult/ExamResultReport.cshtml
+++ b/Rio/Rio.Web/Views/ExamResult/ExamResultReport.cshtml
@@ -49,7 +49,7 @@
     <div class="row" style="margin-bottom:10px;">
         <div class="col-md-4">
 
-            <img width="100%" height="80%" src="@Model.ScannedQuestion.ScannedSheetImageBase64" />
+            <img width="100%" height="80%" src="@Model.ExamResult.ScannedSheetImageBase64" />
 
         </div>
         <div class="col-md-8" style="overflow-y: scroll;height:800px;">
