--- a/Rio/Rio.Web/Views/Rectify/ScanQuestions.cshtml
+++ b/Rio/Rio.Web/Views/Rectify/ScanQuestions.cshtml
@@ -33,7 +33,7 @@
         @if (Model.scannedSheetRow.ScannedImageSourcePath != null)
         {
             <h5 style="text-align:right">
-                Image Path: @Model.scannedSheetRow.ScannedImageSourcePath
+                Image Name: @Model.scannedSheetRow.ScannedImageSourcePath
         </h5>
         }
         <br />
