--- a/Rio/Rio.Web/Views/ExamResult/ExamSectionResultNormalReport.cshtml
+++ b/Rio/Rio.Web/Views/ExamResult/ExamSectionResultNormalReport.cshtml
@@ -1,4 +1,4 @@
-@model Rio.Web.Modules.Workspace.CommonController.Models.ExamResultReportModel
+@model Rio.Web.Modules.Workspace.CommonController.Models.SectionReportModel
 
 @{
     ViewData["Printing"] = true;
@@ -7,18 +7,19 @@
         "~/Views/Shared/_LayoutNoNavigation.cshtml";
 }
 
+<section>
+</section>
 <section class="result">
     <div style="margin-top:10px; padding-bottom:10px; padding-left:70px;">
+
         <button type="button" class="btn btn-info">
             <a onclick="printDiv('divMain')" style="cursor: pointer; margin-right: 8px;color:white;">Print </a>
         </button>
+        <button type="button" class="btn btn-info">
+            <a onclick="downloadDiv('divMain')" style="cursor: pointer; margin-right: 8px;color:white;">Download </a>
+        </button>
     </div>
     <div class="row" style="margin-bottom:10px;">
-        @*<div class="col-md-4">
-
-            <img width="100%" height="80%" src="@Model.ExamResult.ScannedSheetImageBase64" />
-
-        </div>*@
         <div class="col-md-12" style="overflow-y: scroll;height:800px;">
             <div class="row" style="margin-left:5px;">
                 <div id="divMain" class="keepTogether" style="page-break-inside: avoid; width: 925px;height:auto; margin: 0 auto; border: 1px solid black; padding:10px;">
@@ -60,79 +61,51 @@
                     <div class="row">
                         <div class="col-xs-12 col-12 table-responsive">
                             <h2 class="page-header">
-                                <small class="pull-right">Question Details: </small><br>
+                                <small class="pull-right">Section Details: </small><br>
                                 @*<small class="pull-right">Exam Result Id: @Model.ExamResult.Id </small><br>
                                 <small class="pull-right">Exam Id: @Model.ExamResult.ExamId </small><br>*@
                             </h2>
                             <table class="table table-striped">
                                 <thead>
                                     <tr>
-                                        <th>Student Name: @Model.ExamResult.StudentFullName</th>
-                                        <th>Roll Number: @Model.ExamResult.RollNumber</th>
-                                        @foreach (var eqr in Model.Details)
-                                        {
-                                            <th>Question No.: @(eqr.QuestionIndex)</th>
-                                        }
+                                        <th>Student Name</th>
+                                        <th>Roll Number</th>
+                                        <th>Section Name</th>
+                                        <th>Total Question In Section</th>
+                                        <th>Total Attempted In Section</th>
+                                        <th>Total NotAttempted In Section</th>
+                                        <th>Total Right In Section</th>
+                                        <th>Total Wrong In Section</th>
+                                        <th>Total Marks In Section</th>
+                                        <th>Total Obatained Marks In Section</th>
+                                        <th>Percentage</th>
                                     </tr>
-                                    <tr>
-                                        <td>Right Options</td>
-                                        <td></td>
-                                        @foreach (var eqr in Model.Details)
-                                        {
-                                            <td>@(eqr.RightOptions.ToString())</td>
-                                        }
-                                    </tr>
-                                    <tr>
-                                        <td>Selected Options</td>
-                                        <td></td>
-                                        @foreach (var eqr in Model.Details)
-                                        {
-                                            @if (!string.IsNullOrEmpty(eqr.CorrectedOptions))
+                                </thead>
+                                <tbody>
+                                    @foreach (var d in Model.ExamSectionResultList)
+                                    {
+                                        <tr>
+                                            @if (!string.IsNullOrEmpty(d.StudentFullName))
                                             {
-                                                <td>@(eqr.CorrectedOptions.ToString())</td>
+                                                <td>@(d.StudentFullName.ToString())</td>
                                             }
                                             else
                                             {
-                                                <td>Not Attempted</td>
+                                                <td></td>
                                             }
-                                        }
-                                    </tr>
-                                    <tr>
-                                        <td>Obtained Marks</td>
-                                        <td></td>
-                                        @foreach (var eqr in Model.Details)
-                                        {
-                                            <td>@(eqr.ObtainedMarks.ToString())</td>
-                                        }
-                                    </tr>
-                                    <tr>
-                                        <td>Score</td>
-                                        <td></td>
-                                        @foreach (var eqr in Model.Details)
-                                        {
-                                            <td>@(eqr.Score.ToString())</td>
-                                        }
-                                    </tr>
-                                </thead>
-                                @*<tbody>
-                                @foreach (var d in Model.Details)
-                                {
-                                <tr>
-                                @*<td>@(d.QuestionIndex.ToStringDefault())</td>
-                                <td>@(d.RightOptions.ToString())</td>
-                                @if (!string.IsNullOrEmpty(d.CorrectedOptions))
-                                {
-                                <td>@(d.CorrectedOptions.ToString())</td>
-                                }
-                                else
-                                {
-                                <td></td>
-                                }
-                                <td>@(d.ObtainedMarks.ToString())</td>
-                                <td>@(d.Score.ToString())</td>
-                                </tr>
-                                }
-                                </tbody>*@
+                                            <td>@(d.RollNumber)</td>
+                                            <td>@(d.ExamSectionName)</td>
+                                            <td>@(d.TotalQuestions.ToString())</td>
+                                            <td>@(d.TotalAttempted.ToString())</td>
+                                            <td>@(d.TotalNotAttempted.ToString())</td>
+                                            <td>@(d.TotalRightAnswers.ToString())</td>
+                                            <td>@(d.TotalWrongAnswers.ToString())</td>
+                                            <td>@(d.TotalMarks.ToString())</td>
+                                            <td>@(d.ObtainedMarks.ToString())</td>
+                                            <td>@(d.Percentage.ToString())</td>
+                                        </tr>
+                                    }
+                                </tbody>
                             </table>
                             <!-- /.col -->
                         </div>
@@ -142,7 +115,6 @@
         </div>
 
     </div>
-
 
 </section>
 <script>
