--- a/Rio/Rio.Web/Views/ExamResult/ExamResultReport.cshtml
+++ b/Rio/Rio.Web/Views/ExamResult/ExamResultReport.cshtml
@@ -43,16 +43,15 @@
         </button>
     </div>
     <div class="row" style="margin-bottom:10px;">
-        <div class="col-md-4">
 
-            <img width="100%" height="80%" src="@Model.ExamResult.ScannedSheetImageBase64" />
-
-        </div>
-        <div class="col-md-8" style="overflow-y: scroll;height:800px;">
+        <div class="col-md-12">
             <div class="row" style="margin-left:5px;">
-                <div id="divMain" class="keepTogether" style="page-break-inside: avoid; width: 925px;height:auto; margin: 0 auto; border: 1px solid black; padding:10px;">
+                <div id="divMain" class="keepTogether">
                     <div class="row">
-                        <div class="col-xs-12 col-12 table-responsive">
+                        <div class="col-md-5" style="border: 1px solid black;height:800px; padding:10px;">
+                            <img width="100%" height="100%" src="@Model.ExamResult.ScannedSheetImageBase64" />
+                        </div>
+                        <div class="col-md-7 table-responsive" style="overflow-y: scroll; height:auto; page-break-inside: avoid; margin: 0 auto; border: 1px solid black; padding:10px;">
                             <h2 class="page-header">
                                 <small class="pull-right">@Model.ExamResult.TenantName</small>
                             </h2>
@@ -61,18 +60,19 @@
                             </h2>
                             <table class="table table-striped">
                                 <tr>
-                                    <td colspan="2">Roll Number:</td>
-                                    <td colspan="2">@Model.ExamResult.RollNumber</td>
+                                    <td colspan="2">OCR Data:</td>
+                                    <td colspan="2">@Model.ExamResult.OCRData1Value</td>
                                     <td colspan="2"> </td>
                                     <td colspan="2">Student Name:</td>
                                     <td colspan="4">@Model.ExamResult.StudentFullName</td>
                                 </tr>
                                 <tr>
+                                    <td colspan="2">Roll Number:</td>
+                                    <td colspan="2">@Model.ExamResult.RollNumber</td>
                                     <td colspan="2">Exam Code:</td>
                                     <td colspan="2">@Model.ExamResult.ExamCode</td>
-                                    <td colspan="2"> </td>
                                     <td colspan="2">Exam Name:</td>
-                                    <td colspan="4">@Model.ExamResult.ExamName</td>
+                                    <td colspan="2">@Model.ExamResult.ExamName</td>
                                 </tr>
                                 <tr>
                                     <td colspan="2">Marks Obtained:</td>
@@ -109,12 +109,7 @@
                                     </tr>
                                 </tbody>
                             </table>
-                        </div>
-                        <!-- /.col -->
-                    </div>
 
-                    <div class="row">
-                        <div class="col-xs-12 col-12 table-responsive">
                             <h2 class="page-header">
                                 <small class="pull-right">Question Details: </small><br>
                                 @*<small class="pull-right">Exam Result Id: @Model.ExamResult.Id </small><br>
@@ -161,10 +156,7 @@
                 </div>
             </div>
         </div>
-
     </div>
-
-
 </section>
 <script>
     function printDiv(divName) {
@@ -179,9 +171,4 @@
         document.body.innerHTML = originalContents;
         location.reload();
     }
-
-
-
-
-
 </script>
