--- a/Rio/Rio.Web/Views/Rectify/ScanQuestions.cshtml
+++ b/Rio/Rio.Web/Views/Rectify/ScanQuestions.cshtml
@@ -43,15 +43,15 @@
         }
         <br /><br />
     </div>
-    <div class="row" style="margin-bottom: 20px;">
-        <div class="col-md-6" style="border: 1px solid black; padding:10px;">
+    <div class="row" style="margin-bottom: 5px;">
+        <div class="col-md-6" style="border: 1px solid black; height:700px;padding:10px;">
             @if (Model.scannedSheetRow.ImageBase64 != null)
             {
-                <img width="100%" height="80%" src="@Model.scannedSheetRow.ImageBase64" />
+                <img width="100%" height="100%" src="@Model.scannedSheetRow.ImageBase64" />
             }
 
         </div>
-        <div class="col-md-6" style="overflow-y: scroll;height:600px; border: 1px solid black; padding:10px; margin-bottom: 20px;" ">
+        <div class="col-md-6" style="overflow-y: scroll;height:700px; border: 1px solid black; padding:10px; margin-bottom: 20px;" ">
             <div class="row" style="margin-left:5px;">
                 <div class="col-md-2">
                     <label> Question Index</label>
